src/styles/styles.styl
html
  font-family 'Minecraft'
  font-size 40px

  @media screen and (max-width 600px)
    font-size 20px

body
  height 50vh
  display flex
  flex-direction column
  justify-content center
  align-items center

p
  margin 0

a
  color inherit

#time
  font-size 2rem
  cursor pointer

#source
  position fixed
  bottom 0
  margin-bottom 10px

  font-size 20px

